# ops-logger

./: .gitignore  .stm32f76x-cross.build  CMakeLists.txt  Jenkinsfile  meson.build
drivers/: logger-mem.c  logger-nxp-uart.c  logger_stm32_uart.c
include/: cbuffer.h  logger-v3.h  logger-wrapper.h  logger.h  queue.h  tracer.h
src/: .logger.c.swp  cbuffer.c  logger-stdio.c  logger-v3-stdio.c  logger-v3.c  logger.c  meson.build  queue.c
test/: .main.c.swp  logger_v3_test.c  main.c  meson.build
